--- a/css/wildcat-correction.webflow.css
+++ b/css/wildcat-correction.webflow.css
@@ -17,8 +17,8 @@ h1 {
 }
 
 h2 {
-  margin: 10px 166px;
-  font-size: 26px;
+  margin: 10px 0px;
+  font-size: 32px;
   line-height: 36px;
   font-weight: 700;
   text-shadow: none;
@@ -55,13 +55,10 @@ h6 {
 
 p {
   margin-top: -1px;
-  margin-bottom: -29px;
+  margin-bottom: -26px;
   padding-top: 41px;
-  padding-right: 20%;
-  padding-left: 20%;
-  font-size: 17px;
+  font-size: 22px;
   line-height: 23px;
-  text-align: left;
   letter-spacing: 0px;
   text-shadow: none;
 }
@@ -261,13 +258,29 @@ p {
   text-align: center;
 }
 
+.surveytitle {
+    margin-top:-0.5em;
+  margin-bottom:0em;
+  padding-top:0em;
+  padding-bottom:0.5em;
+  direction: ltr;
+  font-family: Georgia, Times, 'Times New Roman', serif;
+  color: #f8f8f8;
+  font-size: 67px;
+  font-weight: 700;
+  text-align: center;
+}
 .surveybutton {
   position: relative;
   margin-top: 98px;
   background-color: #ec5f5f;
   color: #fff;
+    margin-bottom:-10em;
 }
 
+#surveypage {
+    margin-bottom:-2em;
+}
 .nav {
   padding-top: 7px;
   padding-bottom: 0px;
@@ -325,15 +338,14 @@ p {
   padding-left: 20%;
   background-color: rgba(56, 56, 56, .81);
   font-family: Georgia, Times, 'Times New Roman', serif;
-  font-size: 10px;
   font-weight: 400;
   text-align: center;
 }
 
 .resbutton {
   display: block;
-  margin-right: 40%;
-  margin-left: 40%;
+  margin-right: 35%;
+  margin-left: 35%;
   padding: 21px 0px 25px;
   font-size: 22px;
   text-align: center;
@@ -349,7 +361,6 @@ p {
 .resultbutton.firstpage {
   margin-top: 45px;
   margin-bottom: -1px;
-  margin-left: 40%;
 }
 
 .logininfo {
@@ -383,20 +394,62 @@ p {
   font-weight: 700;
 }
 
+.firstbutton {
+    margin-top:3em;
+    margin-left:47%;
+    display: inline-block;
+  padding: 9px 15px;
+  background-color: #3898EC;
+  color: white;
+  border: 0;
+  line-height: inherit;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 0;
+}
+
+.surveybutton {
+    width:15%;
+    margin-top:3em;
+    margin-left:46%;
+    display: inline-block;
+  padding: 9px 15px;
+  background-color: #3898EC;
+  color: white;
+  border: 0;
+  line-height: inherit;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 0;
+}
+.statembed {
+    margin-bottom:3em;
+    margin-left:15%;
+    margin-right:20%;
+    width:70%;
+}
+.surveyembed {
+    margin-bottom:0em;
+    margin-left:5%;
+    margin-right:5%;
+    width:100%;
+}
 .statpage {
   margin-top: -20px;
   margin-bottom: 28px;
-  margin-left: 42%;
+  margin-left: 38%;
+    margin-right:38%;
   padding-left: 0px;
+    width=10%;
   font-family: Georgia, Times, 'Times New Roman', serif;
   font-size: 63px;
   font-weight: 600;
 }
 
 .embed {
-  margin-top: 33px;
-  margin-bottom: 54px;
-  padding: 0px 0px 0px 25%;
+  margin-top: -9px;
+  margin-bottom: 14px;
+  padding: 0px 0px 1px 15%;
 }
 
 html.w-mod-js *[data-ix="display-none-on-load"] {
@@ -407,9 +460,6 @@ html.w-mod-js *[data-ix="display-none-on-load"] {
   .container {
     padding-right: 79px;
     padding-left: 79px;
-  }
-  .resultbutton.firstpage {
-    margin-left: 33%;
   }
 }
 
@@ -451,9 +501,6 @@ html.w-mod-js *[data-ix="display-none-on-load"] {
   }
   .align-right {
     text-align: center;
-  }
-  .resultbutton.firstpage {
-    margin-left: 25%;
   }
 }
 
