--- a/css/wildcat-correction.webflow.css
+++ b/css/wildcat-correction.webflow.css
@@ -394,8 +394,8 @@ p {
   font-weight: 700;
 }
 
-#firstbutton {
-    margin-top:3em;
+.firstbutton {
+    margin-top:2em;
     margin-left:47%;
     display: inline-block;
   padding: 9px 15px;
